# portfolio-analyser

./: .dockerignore  .gitignore  Dockerfile  README.md  dashboard.py  pyproject.toml
docker_inputs/: portfolio.csv  portfolio.xlsx
inputs/: bad_ticker.csv  no_date_column.csv  non_numeric_position.xlsx  portfolio_excel.xlsx  wrong_file_type.txt
processing/: __init__.py  core.py
tests/: context.py  test_processing.py
