[tool.poetry]
name = "portfolioanalyser"
version = "0.1.0"
description = ""
authors = ["piri9825 <piranavan.kamalarubirasan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.x"
pandas = "^2.2.3"
dash = "^2.18.2"
yfinance = "^0.2.50"
pytest = "^8.3.4"
ruff = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
